# medacc

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_seed_faculties.py  0003_add_analytics_and_schedule.py  0004_add_osce_attempts.py  0005_extend_plan_tasks_for_osce.py  0006_add_plan_events.py  0007_add_case_plan_tasks.py  0008_add_clinical_case_attempts.py  0009_add_user_study_preferences.py  0010_add_user_study_weekdays.py  0011_add_planned_task_id_to_test_sessions.py  0012_add_plan_task_variant.py  0013_add_content_tables.py  0014_add_case_quiz_questions.py  0015_add_analytics_performance_indexes.py  0016_add_case_attempt_answer_feedback.py  0017_add_strict_case_osce_exam_sessions.py  0018_add_plan_task_missed_state.py  0019_add_exam_simulation_foundation.py  0020_add_daily_stat_study_seconds.py  0021_add_attempt_context.py  0022_add_user_last_login_at.py
backend/app/: main.py
backend/app/controllers/: accreditation_controller.py  admin_clinical_case_controller.py  admin_content_controller.py  router.py  (+14 more)
backend/scripts/: create_admin.py  reset_admin_password.py
backend/tests/: conftest.py  test_accreditation_service.py  test_admin_policy.py  test_app_smoke.py  test_clinical_case_quiz.py  test_config.py  test_evidence_context.py  test_initial_diagnostic_validation.py  test_readiness_engine.py  test_schemas_validation.py  test_security.py  test_study_schedule.py  test_training_thresholds.py
(+276 files in other folders)
